--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -1,25 +1,72 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:f="http://xmlns.jcp.org/jsf/core"
-      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
-<h:head>
-    <h:outputStylesheet library="static" name="style.css" />
-    <title>Gestão Empresas</title>
-</h:head>
+<ui:composition xmlns="http://www.w3.org/1999/xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core"
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="WEB-INF/template/layout.xhtml">
 
-<h:body>
-    <header>
-        <h:graphicImage library="static" name="logo2.png" style="height:35px; padding: 0; margin: 0"/>
-    </header>
+    <ui:define name="titulo">Cadastro de Empresas</ui:define>
 
-    <h2>Cadastro de Empresas</h2>
+    <ui:define name="conteudo">
+        <f:metadata><!--permite definir metadados na view-->
+            <f:viewAction action="#{empresaBean.listarEmpresas}"/><!--permite chamar o metodo com os dados do banco-->
+        </f:metadata>
 
-    <div id="conteudo">
+        <h:form>
 
-    </div>
+            <p:toolbar>
+                <f:facet name="left">
+                    <p:inputText placeholder="Informe um termo..."/>
 
-    <footer> DRS Tecnologias</footer>
-</h:body>
-</html>
+                    <p:commandButton value="Pesquisar" icon="fa fa fa-search"/>
+
+                    <span class="ui-separator">
+                    <span class="ui-icon ui-icon-grip-dotted-vertical"/>
+                </span>
+
+                    <p:commandButton value="Novo" icon="fa fa-plus"/>
+
+                    <span class="ui-separator">
+                    <span class="ui-icon ui-icon-grip-dotted-vertical"/>
+                </span>
+
+                    <p:commandButton title="Editar" icon="fa fa-edit"/>
+
+                    <p:commandButton title="Excluir" icon="fa fa-trash"/>
+
+                    <span class="ui-separator">
+                    <span class="ui-icon ui-icon-grip-dotted-vertical"/>
+                </span>
+
+                    <p:commandButton title="Exportar para o Excel" icon="fa fa-file-excel-o"/>
+                </f:facet>
+            </p:toolbar>
+
+            <p:spacer height="10px"/>
+
+            <p:dataTable value="#{empresaBean.empresas}" var="empresa" emptyMessage="Nenhuma informação a ser exibida."
+                         paginator="true" rows="10" paginatorPosition="bottom">
+                <p:column headerText="Razão Social" sortBy="#{empresa.razaoSocial}">
+                    <h:outputText value="#{empresa.razaoSocial}"/>
+                </p:column>
+
+                <p:column headerText="Nome Fantasia">
+                    <h:outputText value="#{empresa.nomeFantasia}"/>
+                </p:column>
+
+                <p:column headerText="CNPJ">
+                    <h:outputText value="#{empresa.cnpj}"/>
+                </p:column>
+
+                <p:column headerText="Tipo de Empresa">
+                    <h:outputText value="#{empresa.tipo}"/>
+                </p:column>
+
+                <p:column headerText="Ramo Atividade">
+                    <h:outputText value="#{empresa.ramoAtividade.descricao}"/>
+                </p:column>
+            </p:dataTable>
+        </h:form>
+    </ui:define>
+</ui:composition>
